[MP] + gamecode: Added cg_fovViewmodel to adjust the field of view for first-person weapons
[SP/MP] * Drastically improved command/cvar tab-completion including auto-completion of arguments (e.g. map mp/ffa1)
[MP] + Added cvar_modified to show which cvars have been changed from default values
[SP] + NPCs support alternate saber colours
[MP] * gamecode: Fixed saber lock crash
[MP] * gamecode: Force updates of clients at a fixed interval to prevent certain exploits.
[MP] * gamecode: Prevent fast teamswitch exploit
[MP] * gamecode: Disable "scoreboard" team
[MP] * gamecode: Fix some looping sound issues
[MP] * gamecode: Fix spectators being stuck when they stop following dead/disintegrated players
[SP] * Fix force absorb capping to 100 instead of maximum force points
[MP] * gamecode: Precache weapons on map_restart if g_weaponDisable changes
[MP] * gamecode: Properly detect server settings (weapon/force disable)
[SP/MP] * Fix Windows issue where pressing alt key in windowed mode caused a temporary freeze
[MP] * gamecode: Optimised .sab parsing and fixed some potential memory corruption
[MP] * gamecode: Filter multiple '@' characters in a name resulting in a localised string lookup (translation)
[MP] + gamecode: Added cg_chatBeep and cg_teamChatBeep to toggle the chat message sound
[MP] * gamecode: Default/missing model+saber is now "kyle"
[MP] * gamecode: Fixed tournament queueing (for duel/power duel)
[MP] * gamecode: Fixed issues where spectators had trouble flying through doors close together
[MP] + gamecode: Added JK2 gametypes
[MP] + Added s_doppler sound effect for moving sound sources (rockets)
[MP] * gamecode: Fix cg_smoothClients affecting local player negatively
[MP] * gamecode: Rewrote callvote code to allow disabling specific votes, added more options (e.g. display map list)
[SP] + gamecode: Added cg_smoothCamera (default 1)
[SP] + gamecode: Added cg_dynamicCrosshair (default 1)