@@ -1125,6 +1125,10 @@ static void ParseSurfaceSprites( const char *_text, shaderStage_t *stage )
 	{
 		sstype = SURFSPRITE_EFFECT;
 	}
+	else if (!Q_stricmp(token, "flattened"))
+	{
+		sstype = SURFSPRITE_FLATTENED;
+	}
 	else
 	{
 		ri->Printf( PRINT_ALL, S_COLOR_YELLOW  "WARNING: invalid type in shader '%s'\n", shader.name );
